[project]
name = "grepcoll"
version = "0.1.0"
description = "GrepColl: grep, but with recoll underneath, useful to search with stemming and lemmatization"
readme = "README.md"
authors = [
  {name = "Nikolai Ponomarev", email = "wowasterdev@gmail.com"},
  {name = "Efim Kubyshkin"}
]
maintainers = [
  {name = "Nikolai Ponomarev", email = "wowasterdev@gmail.com"},
  {name = "Efim Kubyshkin"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "ruff",  # linting
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/wowaster/grepcoll/issues"
homepage = "https://github.com/wowaster/grepcoll"

[project.scripts]
grepcoll = "grepcoll.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true

[tool.uv.pip]
system = true